--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-toastify": "^7.0.4",
     "reduxjs-toolkit-persist": "^7.0.1",
     "sortablejs": "^1.15.0",
+    "swiper": "^6.8.4",
     "thaidatepicker-react": "^0.2.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
